<resources>
    <string name="app_name">VoltorbFlip Mobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="this_is_a_tile_image">This is a tile image</string>
    <string name="tile_value_here">tile Value Here</string>
    <string name="point_values">insert value\n</string>
    <string name="insert_bombs">insert bombs</string>
    <string name="this_will_be_the_animation" />
    <string name="this_is_to_extend_outside_the_tile" />
    <string name="backImage">back part of the Game Tiles</string>
    <string name="frontImage">Front part of Game Tiles</string>
    <string name="animationFrame">Placeholder to animate the tile effects</string>
    <string name="general_tile_desc">This will be the background of the gameTiles</string>
    <string name="mini_voltorb">This is the image of the mini voltorb in every infotile</string>
    <string name="score_val">0</string>
    <string name="you_lose_text">You Lose!</string>
    <string name="you_win">You win!</string>
</resources>