<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="50dp"
    android:layout_height="50dp"
    >



    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backImage"
        android:visibility="visible"

        />

    <ImageView
        android:id="@+id/front_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/frontImage"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/animation_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/animationFrame"
        android:visibility="gone"
        />



</FrameLayout>



