<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="45dp"
    android:layout_height="45dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"

    >


    <ImageView
        android:id="@+id/back_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"

        android:contentDescription="@string/backImage"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <ImageView
        android:id="@+id/front_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/frontImage"
        android:visibility="gone"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/animation_frame"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/animationFrame"
        android:visibility="gone"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <View
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/tile_border"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        >

    </View>


</androidx.constraintlayout.widget.ConstraintLayout>