<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="45dp"
    android:layout_height="45dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/tile2"

    >


    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="2dp"

        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <ImageView
        android:id="@+id/mini_voltorb"
        android:contentDescription="@string/mini_voltorb"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="5dp"
        android:translationZ="90dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/total_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/point_values"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Bombs Text -->
    <TextView
        android:id="@+id/total_bombs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1.5dp"
        android:gravity="center"
        android:text="@string/insert_bombs"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />





    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tile_border" />





</androidx.constraintlayout.widget.ConstraintLayout>